--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ eframe = { version = "0.29", default-features = false, features = ["default_font
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
 anyhow = "1.0"
-libc = "0.2"
 dirs = "5.0"
+daemonize = "0.5"
+nix = { version = "0.29", features = ["fs"] }
